<resources>
    <string name="app_name">MySample</string>
    <string name="skip_button">Skip</string>
    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_card">Cards Demo</string>
    <string name="title_activity_viewpager">ViewPager Demo</string>
    <string name="title_activity_photo">Photo Demo</string>
    <string name="title_activity_tab">Tab Demo</string>
    <string name="title_activity_setting">Setting Demo</string>
    <string name="title_activity_spinner">Spinner Demo</string>
    <string name="title_activity_baidu">Baidu Map Demo</string>
    <string name="title_activity_webView">WebVeiw Demo</string>
    <string name="title_activity_JS_webView">WebVeiw JS Demo</string>
    <string name="title_activity_NestedScrollingDemo">NestedScrolling Demo</string>
    <string name="title_activity_BlurDialogDemo">BlurDialog Demo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_home">home</string>
    <string name="action_settings">Settings</string>

    <!--定义Private behavior的字符串资源-->
    <string name="ScrollAwareFABBehavior">com.rockgarden.myapp.behavior.ScrollAwareFABBehavior</string>
    <string name="ScrollingViewPagerBehavior">com.rockgarden.myapp.behavior.ScrollingViewPagerBehavior</string>
    <string name="FixedScrollingViewBehavior">com.rockgarden.myapp.behavior.FixedScrollingViewBehavior</string>
    <string name="NoScrollingBehavior">com.rockgarden.myapp.behavior.NoScrollingBehavior</string>

    <string name="long_text">Error inflating class ImageView: This is one issue, It was sort of a misleading error to me and kept me stumped for around 30 minutes this morning. It isn\'t that Android cannot find the class. It is that it is having trouble importing the image source file.  Now the reason that it is having trouble finding the image is because I did not copy the source image into the directory correctly. I have chosen to drag the source file from another folder directory into the appropriate locations. In the process, it did not copy the file over properly. Or it copied it over as just a link to the other resource.  As a result Android does not know what to do with the resource and throws that odd error. In order to resolve this problem, you need to delete the old image sources and then replace them with direct full copies of their equivalents. Then you should see this error go away and the application working as expected from the xml layout code.</string>
    <string name="good_photo">I like it.</string>
    <!-- important! Can’t Can\’t -->
    <string name="bad_photo">It is ugly.</string>
    <string name="picture_info">Only you, guy.</string>
    <string name="action_refresh">refresh</string>
    <string name="action_search">search</string>
    <string name="action_share">share</string>
    <string name="title_activity_action_bar_tabs">ActionBarTabsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <!--Theme Switcher-->
    <string name="settings_text_select_theme">Select Theme:</string>
    <string name="settings_text_credentials">Credentials</string>
    <string name="settings_text_username_hint">username</string>
    <string name="settings_text_password_hint">password</string>
    <string name="settings_text_sync_automatically">Sync automatically</string>
    <string name="settings_text_location">Location</string>
    <string name="settings_text_state_on">On</string>
    <string name="settings_text_state_off">Off</string>
    <string name="settings_text_clear_data">Clear Data</string>

    <string-array name="theme_array">
        <item>Light</item>
        <item>DayNight</item>
    </string-array>

    <string name="quila_name">Quila</string>
    <string name="quila_tagline">I love bones and slippers</string>
    <string name="quila_name2">Quila!</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie. Etiam ac tristique sem, id commodo justo. Phasellus congue tincidunt lectus, at dignissim ligula maximus eu. Quisque interdum nunc eget tellus bibendum suscipit. Phasellus feugiat ultricies posuere. Nullam porta accumsan velit, ut rutrum massa fermentum eu. Nunc ac bibendum nunc. Mauris eu ultricies ipsum. Ut id dolor dui. Pellentesque dictum dui vel tempus maximus. Vivamus non nisi quis libero scelerisque pretium. Ut eu tristique justo. Sed pellentesque placerat quam, ut ultricies turpis feugiat a. Aliquam a volutpat risus.

Praesent at lectus semper, suscipit elit in, facilisis massa. Phasellus sed vestibulum ante, a euismod sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tincidunt orci augue, a porta odio lacinia eu. Nunc in congue risus. Maecenas commodo nibh ac enim fermentum, eu sagittis massa blandit. Vestibulum elementum massa nec dapibus mollis. Etiam porta, est sit amet aliquet porta, odio elit finibus risus, id rutrum purus mi non ipsum. Nulla viverra nec enim sed venenatis.

Maecenas mattis, erat et viverra euismod, neque diam porttitor tellus, in fringilla metus est id augue. Nunc at metus cursus, porttitor nisi vitae, congue diam. Curabitur ligula massa, ullamcorper eget scelerisque vel, pharetra ac sapien. Ut auctor luctus ultricies. Nullam semper tortor ac elementum luctus. In et tempus ex. Praesent sodales, dolor id volutpat elementum, ligula enim euismod odio, maximus sodales magna neque nec neque. Curabitur pretium nisl neque, consequat aliquet dui tincidunt ac. Vivamus augue nunc, aliquet eu ex a, ultrices aliquam lorem. Duis nibh lectus, ultricies vel iaculis sit amet, imperdiet id sapien. Duis scelerisque sodales metus eu rutrum. Suspendisse posuere nisi ac magna consequat, eu vestibulum ipsum venenatis. Suspendisse auctor nisi nec leo venenatis tristique.

Praesent tincidunt lorem sit amet mi consequat cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae blandit sapien. Curabitur est sapien, lobortis sit amet facilisis vel, faucibus eu quam. Nam tempus libero at tellus tempor laoreet. Pellentesque quam lorem, tincidunt in molestie eget, dictum vel risus. Nunc gravida convallis mattis.
    </string>

    <string name="actions_fullscreen">Full Screen</string>
    <string name="blur_button">Blur Dialog</string>
    <string name="blur_title">Blur Sample</string>
    <string name="dialog_fragment_title">Blur Dialog Fragment\n\nhttps://github.com/tvbarthel/BlurDialogFragment</string>
    <string name="activity_sample_blur_radius">Blur radius : </string>
    <string name="activity_sample_down_scale_factor">Down Scale Factor : </string>
    <string name="activity_sample_blur_debug">Debug enable</string>
    <string name="activity_sample_blur_dimming">Dimming enable</string>
    <string name="activity_sample_actionbar_blurred">Apply blur effect on action bar</string>
    <string name="activity_sample_blur_userendercript">Use RenderScript if possible</string>

</resources>
