<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_activity_spinner" />
        <item
            android:id="@+id/show_photo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_activity_photo" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_activity_viewpager" />
        <item
            android:id="@+id/nav_baiduMap"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_activity_baidu" />
        <item
            android:id="@+id/show_card"
            android:icon="@drawable/ic_vector_menu_card"
            android:title="@string/title_activity_card" />
        <item
            android:id="@+id/show_webView"
            android:icon="@drawable/ic_vector_menu_card"
            android:title="@string/title_activity_webwiew" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
            <item
                android:id="@+id/nav_set"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/title_activity_setting" />
        </menu>
    </item>

</menu>
